Added Politico articles

--- a/newzy_fileparse.ipynb
+++ b/newzy_fileparse.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "[56591 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download Real Clear News Articles"
+    "### Get Real Clear News Articles"
    ]
   },
   {
@@ -394,6 +394,24 @@
    "outputs": [],
    "source": [
     "parse_text(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "realclear['articles'] = articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "realclear.to_csv('realclear.csv')"
    ]
   },
   {
@@ -734,6 +752,257 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Politico Articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "politico = newzy[newzy.doc_source == 'Politico Magazine'].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>doc_id</th>\n",
+       "      <th>doc_source</th>\n",
+       "      <th>doc_title</th>\n",
+       "      <th>doc_content</th>\n",
+       "      <th>doc_date</th>\n",
+       "      <th>doc_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1542</td>\n",
+       "      <td>Politico Magazine</td>\n",
+       "      <td>Sex in the Senate</td>\n",
+       "      <td>On Jan. 1, 1943, Robert Gene Baker arrived in ...</td>\n",
+       "      <td>11/19/2013</td>\n",
+       "      <td>http://www.politico.com/magazine/story/2013/11...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1543</td>\n",
+       "      <td>Politico Magazine</td>\n",
+       "      <td>Why Does Barack Keep Making Weird Jokes About ...</td>\n",
+       "      <td>Clinical psychologist Steven Berglas will put ...</td>\n",
+       "      <td>11/19/2013</td>\n",
+       "      <td>http://www.politico.com/magazine/story/2013/11...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1544</td>\n",
+       "      <td>Politico Magazine</td>\n",
+       "      <td>Free Mary Cheney!</td>\n",
+       "      <td>When the House of Representatives voted to rep...</td>\n",
+       "      <td>11/19/2013</td>\n",
+       "      <td>http://www.politico.com/magazine/story/2013/11...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1545</td>\n",
+       "      <td>Politico Magazine</td>\n",
+       "      <td>34 Years of Getting to No with Iran</td>\n",
+       "      <td>This week, world powers and Iran may well be p...</td>\n",
+       "      <td>11/19/2013</td>\n",
+       "      <td>http://www.politico.com/magazine/story/2013/11...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1546</td>\n",
+       "      <td>Politico Magazine</td>\n",
+       "      <td>The Tea Party's Attack on Women's Rights</td>\n",
+       "      <td>Two week ago, about a third of women in Texas ...</td>\n",
+       "      <td>11/19/2013</td>\n",
+       "      <td>http://www.politico.com/magazine/story/2013/11...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   doc_id         doc_source  \\\n",
+       "0    1542  Politico Magazine   \n",
+       "1    1543  Politico Magazine   \n",
+       "2    1544  Politico Magazine   \n",
+       "3    1545  Politico Magazine   \n",
+       "4    1546  Politico Magazine   \n",
+       "\n",
+       "                                           doc_title  \\\n",
+       "0                                  Sex in the Senate   \n",
+       "1  Why Does Barack Keep Making Weird Jokes About ...   \n",
+       "2                                  Free Mary Cheney!   \n",
+       "3                34 Years of Getting to No with Iran   \n",
+       "4           The Tea Party's Attack on Women's Rights   \n",
+       "\n",
+       "                                         doc_content    doc_date  \\\n",
+       "0  On Jan. 1, 1943, Robert Gene Baker arrived in ...  11/19/2013   \n",
+       "1  Clinical psychologist Steven Berglas will put ...  11/19/2013   \n",
+       "2  When the House of Representatives voted to rep...  11/19/2013   \n",
+       "3  This week, world powers and Iran may well be p...  11/19/2013   \n",
+       "4  Two week ago, about a third of women in Texas ...  11/19/2013   \n",
+       "\n",
+       "                                             doc_url  \n",
+       "0  http://www.politico.com/magazine/story/2013/11...  \n",
+       "1  http://www.politico.com/magazine/story/2013/11...  \n",
+       "2  http://www.politico.com/magazine/story/2013/11...  \n",
+       "3  http://www.politico.com/magazine/story/2013/11...  \n",
+       "4  http://www.politico.com/magazine/story/2013/11...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "politico.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     3324.000000\n",
+       "mean       268.704272\n",
+       "std       1706.042635\n",
+       "min          7.000000\n",
+       "25%         82.000000\n",
+       "50%        106.000000\n",
+       "75%        134.000000\n",
+       "max      34783.000000\n",
+       "Name: doc_content, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#filter out short articles\n",
+    "politico.doc_content.str.len().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "politico_short = politico[politico.doc_content.str.len() < 268] #get articles less than mean length\n",
+    "politico = politico[politico.doc_content.str.len() >= 268]#save this to recombine later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links = politico_short.doc_url.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parse_text(links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "politico_short['doc_content'] = articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "politico = pd.concat([politico, politico_short], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     3324.000000\n",
+       "mean     13094.644404\n",
+       "std       8958.598290\n",
+       "min          0.000000\n",
+       "25%       7379.500000\n",
+       "50%      10208.000000\n",
+       "75%      16084.750000\n",
+       "max      91429.000000\n",
+       "Name: doc_content, dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "politico.doc_content.str.len().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "politico.to_csv('politico.csv')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -750,24 +1019,6 @@
    "outputs": [],
    "source": [
     "articles.to_csv('articles.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "realclear['articles'] = articles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "realclear.to_csv('realclear.csv')"
    ]
   },
   {
