Finished final edits and charts

--- a/Sentiment_Analysis_News.ipynb
+++ b/Sentiment_Analysis_News.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matt Thomas\n",
+    "\n",
+    "met8k@virginia.edu \n",
+    "\n",
+    "DS5001 \n",
+    "\n",
+    "4/30/20"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -950,6 +963,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Aggregate sentiments for each document\n",
     "SENTIMENT_DOC = SENTIMENT_DOC.reset_index().groupby('doc_id')[vader_emos].mean()"
    ]
   },
